--- a/packages/zustand-sync-tabs/package.json
+++ b/packages/zustand-sync-tabs/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "zustand-sync-tabs",
 	"author": "Mayank Kumar Chaudhari <https://mayank-chaudhari.vercel.app>",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"description": "Zustand middleware to easily sync Zustand state between tabs and windows",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -17,11 +17,7 @@
 	"license": "MIT",
 	"scripts": {
 		"build": "tsc && node createPackageJSON.js",
-		"publish-package": "cp README.md dist && cd dist && npm publish && cd ..",
-		"pp2": "node seo.js && cd dist && npm publish && cd ..",
-		"pp3": "node seo1.js && cd dist && npm publish && cd ..",
-		"pp4": "node seo2.js && cd dist && npm publish && cd ..",
-		"p-gpr": "node createPackageJSON.js && cp README.md dist && node prepGPR.js && cd dist && npm publish && cd .."
+		"publish-package": "cp ../../README.md dist && cd dist && npm publish"
 	},
 	"funding": {
 		"type": "github",
