--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
 		"format": "prettier --write \"**/*.{ts,tsx,js,jsx,md,css,scss}\""
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.26.2",
-		"eslint": "^8.47.0",
-		"prettier": "^3.0.2",
+		"@changesets/cli": "^2.27.1",
+		"eslint": "^8.56.0",
+		"prettier": "^3.1.1",
 		"tsconfig": "workspace:*",
-		"turbo": "latest"
+		"turbo": "^1.11.2"
 	},
 	"packageManager": "pnpm@8.6.10",
 	"name": "turbo-template"
