--- a/packages/zustand-sync-tabs/package.json
+++ b/packages/zustand-sync-tabs/package.json
@@ -17,15 +17,22 @@
 	"license": "MIT",
 	"scripts": {
 		"build": "tsc && node createPackageJSON.js",
-		"publish-package": "cp ../../README.md dist && cd dist && npm publish"
+		"publish-package": "cp ../../README.md dist && cd dist && npm publish",
+		"test": "vitest run --coverage"
 	},
 	"funding": {
 		"type": "github",
 		"url": "https://github.com/sponsors/mayank1513"
 	},
 	"devDependencies": {
+		"@testing-library/react": "^14.1.2",
 		"@types/node": "^20.4.5",
+		"@vitejs/plugin-react": "^4.2.1",
+		"@vitest/coverage-v8": "^1.1.0",
+		"jsdom": "^23.0.1",
+		"octokit": "^3.1.2",
 		"typescript": "^5.1.6",
+		"vitest": "^1.1.0",
 		"zustand": "^4.4.1"
 	},
 	"peerDependencies": {
