--- a/packages/zustand-sync-tabs/package.json
+++ b/packages/zustand-sync-tabs/package.json
@@ -35,7 +35,7 @@
 		"zustand": "^4.4.7"
 	},
 	"peerDependencies": {
-		"zustand": "^3 || ^4"
+		"zustand": "^3 || ^4 || ^5"
 	},
 	"keywords": [
 		"web",
